syntax = "proto3";

option java_package = "com.mmo.server";
option java_outer_classname = "ServerGateProtocol";
option java_generic_services = true;
option java_generate_equals_and_hash = true;

import "common.proto";

enum MapEventType {
	ITEMMOVEEVENT = 0;
	ITEMCREATEEVENT = 1;
	ITEMDESTROYEVENT = 2;
	CHARACTERCREATEEVENT = 3;
	CHARACHTERENTERMAP = 4;
}

message GateServerPing {

}

message GateServerPong {

}



/* Enter map */
message CharacterEnterMapRequest {
	CommonStat stat = 1;
	int32 mapId = 2;
	repeated Item mapItems = 3;
	repeated Character mapCharacters = 4;
	int32 uid = 5;
}

/* Events */
message ItemMoveEventRequest {
	int32 mapId = 1;
	ItemMoveEvent event = 2;
	MapEventType eventType = 3;
	repeated int32 effects = 4;
}

message ItemCreateEventRequest {
	int32 mapId = 1;
	ItemCreateEvent event = 2;
	MapEventType eventType = 3;
	repeated int32 effects = 4;
}

message ItemDestroyEventRequest {
	int32 mapId = 1;
	ItemDestroyEvent event = 2;
	MapEventType eventType = 3;
	repeated int32 effects = 4;
}

message CharacterCreateEventRequest {
	int32 mapId = 1;
	CharacterCreateEvent event = 2;
	MapEventType eventType = 3;
	repeated int32 effects = 4;
}

/* Services Definition */

service EventDispatcher {
	rpc moveEvent (ItemMoveEventRequest) returns (CommonResponse) {}
	rpc createItemEvent (ItemCreateEventRequest) returns (CommonResponse) {}
	rpc destroyItemEvent (ItemDestroyEventRequest) returns (CommonResponse) {}
	rpc createCharacterEvent (CharacterCreateEventRequest) returns (CommonResponse) {}
}

service GateServerService {
	rpc receivePing (GateServerPing) returns (GateServerPong) {}
	rpc characterEnterMapRequest(CharacterEnterMapRequest) returns (CommonResponse) {}
}


